# Virtualstudio

./: .env.example  .gitignore  .replit  ANIMATION_MATERIAL_INTEGRATION_COMPLETE.md  ANIMATION_MATERIAL_INTEGRATION_PLAN.md  ANIMATION_MATERIAL_QUICK_START.md  AUTO_SAVE_ISOLATION_VERIFICATION.md  AVATAR_DEFINITIONS_FIXES.md  AVATAR_PBR_PHASE2_COMPLETE.md  AcademyLandingPage.tsx  AcademySettingsPanel.tsx  AcademyTutorial.tsx  AcademyVideoPlayer.tsx  COURSE_CREATOR_IMPROVEMENTS_PLAN.md  CoursePostAnalyticsWidget.tsx  DATABASE_SCHEMA_COMPLETE.md  DEVELOPER_QUICK_REFERENCE.md  EXPORT_IMPORT_COMPLETE.md  FINAL_STATUS_VERIFICATION.md  FLUX_SETUP_GUIDE.md  FORENSIC_CHECK_REPORT.md  IMPLEMENTATION_STATUS_CHECK.md  IMPLEMENTATION_SUMMARY.md  InstructorRevenueDashboard.tsx  MIGRATION_GUIDE.md  ModuleManager.tsx  PANEL_INTEGRATION_GUIDE.md  PHASE_2_COMPLETE.md  PHASE_2_QUICK_START.md  PRODUCTION_ARCHITECTURE.md  PRODUCTION_COMPLETE.md  PRODUCTION_IMPLEMENTATION.md  PRODUCTION_MANUSCRIPT_VIEW_README.md  PROJECT_MODAL_IMPROVEMENTS.md  QUICK_MIGRATION.md  R2_STORAGE_OVERVIEW.md  README_MIGRATION.md  SCRIPT_STORYBOARD_INTEGRATION.md  SHOT_PLANNER_100_COMPLETE.md  SHOT_PLANNER_FINAL_STATUS.md  (+45 more)
attached_assets/: AcademyAssetBrowser_1766948222922.tsx  AcademyDashboard_1766948157272.tsx  AcademyFloatingActionMenu_1766948222922.tsx  AcademyLandingPage_1766948222922.tsx  AcademyLogo3D_1766948222922.tsx  AcademySettingsPanel_1766948222922.tsx  AcademyTutorial_1766948222922.tsx  CourseEnrollmentPayment_1766948222922.tsx  EditPostDialog_1766948222922.tsx  (+51 more)
backend/: =0.20.0  DECA_UPLOAD_STATUS.md  (+91 more)
(+1234 files in other folders)
