[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Virtual Studio Backend"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.16",
    "braceexpand>=0.1.7",
    "fastapi>=0.127.0",
    "gdown>=5.2.0",
    "httpx>=0.28.1",
    "openai>=2.14.0",
    "opencv-python-headless>=4.10.0",
    "psycopg2-binary>=2.9.11",
    "replicate>=1.0.7",
    "sentencepiece>=0.2.1",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.9",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
]
